--- a/2022-2023/Machine Learning/1.lecture-introductions.org
+++ b/2022-2023/Machine Learning/1.lecture-introductions.org
@@ -1,14 +1,23 @@
-#+title: Machine Learning -- Lecture 1 -- Introduction
+#+title: Machine Learning
+#+SUBTITLE: Lecture 1 - Introductions
 #+author: Jay Morgan
 #+date: <TODO>
 #+startup: beamer
+#+BIBLIOGRAPHY: references.bib
 #+LaTeX_CLASS: beamer
-#+LaTeX_CLASS_OPTIONS: [bigger]
 #+LATEX_HEADER: \usetheme{Berkeley}
 #+LATEX_HEADER: \definecolor{UBCblue}{rgb}{0.54706, 0.13725, 0.26667} % UBC Blue (primary)
 #+LATEX_HEADER: \usecolortheme[named=UBCblue]{structure}
-#+OPTIONS:   H:2 num:t toc:t \n:nil @:t ::t |:t ^:t -:t f:t *:t <:t
+#+LATEX_HEADER: \setlength{\parskip}{5pt}
+#+LATEX_CLASS_OPTIONS: [10pt]
+#+BEAMER_FRAME_LEVEL: 2
+#+LATEX_HEADER: \newcommand{\footnoteframe}[1]{\footnote[frame]{#1}}
+#+LaTeX_HEADER: \addtobeamertemplate{footnote}{}{\vspace{2ex}}
+#+LATEX_HEADER: \usepackage{xcolor}
+#+LATEX_HEADER: \definecolor{LightGray}{gray}{0.95}
+#+OPTIONS:   H:2 num:nil toc:t \n:nil @:t ::t |:t ^:t -:t f:t *:t <:t
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="style.css" />
+#+PROPERTY: header-args:julia :exports both :results output :eval never-export :session :dir ./
 
 * Introductions
 
@@ -21,33 +30,97 @@ related to the course and how you can contact me, should you have any questions.
 
 ** What this course is about?
 
-This is some text. I am writing my text directly into the slide.
+In this course, we will be learning about Machine Learning: firstly, what Machine
+Learning actually is; secondly, we'll take a look at some of the algorithms within
+the scope of Machine Learning, and develop an intuition about how these algorithms
+work and when they would be useful; and finally, how we can compare and evaluate the
+algorithms we've learnt about.
 
-Here is some =src_code=, where I am writing the code with the *Julia* /programming language/
+** How this course will be taught
 
-#+begin_src julia :results output replace :session :eval never-export
-using Plots
-x = randn(10);
-y = randn(10) .+ 5;
+I intended to deliver this course via a series of lectures. These lectures will be
+accompanied by the PDF lecture slides, in which I will provide the definitions and
+provide reference links should you wish to do some extra reading.
 
-function plot_it(x, y)
-    scatter(x, y)
-end
+In some situations, I would also like to supplement my algorithmic definitions with
+some programming code -- for this I will use the [[https://julialang.org/][Julia]] programming language. The code
+snippets would look something like:
+
+#+begin_src julia :results output :session :exports both
+x = Float32.([1, 2, 3, 4]);
+y = x .+ randn(length(x))
 #+end_src
+
+#+RESULTS:
+: 4-element Vector{Float64}:
+:  1.8817576050704024
+:  2.051062476034138
+:  4.340649570113399
+:  3.1284623590241476
+
+** Outline of the course
+
+| Lecture | Expected date | Length  | Topic        |
+|---------+---------------+---------+--------------|
+|       1 | NOW           | 2 hours | Introduction |
+|         |               |         |              |
 
 ** About Me
 
+My name is Dr Jay Morgan. I am a researcher at the Université de Toulon, where I am
+developing Deep Learning models (a sub-field of Machine Learning research) for the
+study of astrophysical phenomenon.
+
+You can find more information and links on my personal (LIS-Lab) website:
+https://pageperso.lis-lab.fr/jay.morgan/
+
+I also publish libraries and source code online:
+- Github: https://github.com/jaypmorgan
+- Gitlab: https://gitlab.com/jaymorgan
+- Source Hut: https://sr.ht/~jaymorgan/
+
+If you have any questions, you can email me at jay.morgan@univ-tln.fr
+
 ** Where you can find the resources
 
+I try to make this course as accessible as possible, which means that I host these
+slides in a variety of ways to suit you.
+
+Firstly, you can find the links to all my courses on my personal website at:
+https://pageperso.lis-lab.fr/jay.morgan/teaching.html
+
+Here you can find the links to each lecture in a PDF or HTML format. Additionally,
+you can view the source code used to make these lectures on source hut:
+https://git.sr.ht/~jaymorgan/teaching. On this git repository you can find all my
+lectures from all years.
+
 * What is learning, anyway?
-** A simple slide
-This slide consists of some text with a number of bullet points:
 
-- the first, very @important@, point!
-- the previous point shows the use of the special markup which
-  translates to the Beamer specific /alert/ command for highlighting
-  text.
+We'll begin our journey into the world of Machine Learning by tackling the question
+of what it means to 'learn' -- how may a machine actually /learn/ anything?
 
+** Study of Mice
 
-The above list could be numbered or any other type of list and may
-include sub-lists.
+To begin to answer the question of learning, we may turn to nature for
+advice. Principally, if we look at the studies conducted with Mice we find some idea
+to notion of learning.
+
+** Computer Programs
+
+For a more formal definition of how computer programs could be said to learn, we have:
+
+#+begin_quote
+A computer program is said to learn from experience $E$ with respect
+to some class of tasks $T$ and performance measure $P$, if its performance
+a tasks in $T$, as measured by $P$, improves with experience $E$.
+#+end_quote
+
+[cite:@mitchell1997machine]
+
+* Bibliography
+
+#+PRINT_BIBLIOGRAPHY:
+
+# Local Variables:
+# org-latex-minted-options: (("frame" "lines") ("linenos=true") ("firstnumber=last") ("fontsize=\\footnotesize") ("bgcolor=LightGray") ("xleftmargin=5pt") ("tabsize=2") ("breaklines=true") ("numbersep=10pt"))
+# End:
