--- a/2022-2023/Machine Learning/references.bib
+++ b/2022-2023/Machine Learning/references.bib
@@ -6,3 +6,10 @@
   year={1997},
   publisher={McGraw-hill New York}
 }
+
+@book{shalev2014understanding,
+  title={Understanding machine learning: From theory to algorithms},
+  author={Shalev-Shwartz, Shai and Ben-David, Shai},
+  year={2014},
+  publisher={Cambridge university press}
+}
