--- a/2022-2023/Machine Learning/1.lecture-introductions.tex
+++ b/2022-2023/Machine Learning/1.lecture-introductions.tex
@@ -1,4 +1,4 @@
-% Created 2022-08-06 sam. 16:15
+% Created 2022-08-10 mer. 15:33
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -16,6 +16,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{pmboxdraw}
 \usetheme{Berkeley}
+\usepackage{booktabs}
 \definecolor{UBCblue}{rgb}{0.54706, 0.13725, 0.26667} % UBC Blue (primary)
 \usecolortheme[named=UBCblue]{structure}
 \setlength{\parskip}{5pt}
@@ -40,12 +41,12 @@
 \maketitle
 
 \section*{Introduction}
-\label{sec:orgdcf2d37}
+\label{sec:org5c44b15}
 
 \subsection*{Course Organisation}
-\label{sec:org9d70cf6}
+\label{sec:org40156a6}
 
-\begin{frame}[label={sec:orgfcf756a}]{Welcome!}
+\begin{frame}[label={sec:org64135b0}]{Welcome!}
 Welcome to all the new students! Here I am going to be talking about Machine Learning
 and all of the great things that this "technology" has to offer. To begin our course,
 I shall start with a bit of house keeping -- more specifically, I will be talking
@@ -54,7 +55,7 @@ subject after-all). In addition, I will tell you where you can find the resource
 related to the course and how you can contact me, should you have any questions.
 \end{frame}
 
-\begin{frame}[label={sec:orgdc545e6}]{What this course is about?}
+\begin{frame}[label={sec:org7424eca}]{What this course is about?}
 In this course, we will be learning about Machine Learning: firstly, what Machine
 Learning actually is; secondly, we'll take a look at some of the algorithms within
 the scope of Machine Learning, and develop an intuition about how these algorithms
@@ -62,30 +63,32 @@ work and when they would be useful; and finally, how we can compare and evaluate
 algorithms we've learnt about.
 \end{frame}
 
-\begin{frame}[label={sec:org81b02c1}]{How this course will be taught}
+\begin{frame}[label={sec:orgfe62796}]{How this course will be taught}
 I intended to deliver this course via a series of lectures. These lectures will be
 accompanied by the PDF lecture slides, in which I will provide the definitions and
 provide reference links should you wish to do some extra reading.
 \end{frame}
 
-\begin{frame}[label={sec:org905d8ac}]{Outline of the course}
+\begin{frame}[label={sec:org683816d}]{Outline of the course}
 \begin{center}
 \begin{tabular}{rlll}
+\toprule
 Lecture & Expected date & Length & Topic\\
-\hline
+\midrule
 1 & NOW & 2 hours & Introduction\\
  &  &  & \\
+\bottomrule
 \end{tabular}
 \end{center}
 \end{frame}
 
 \subsection*{Reading the lectures}
-\label{sec:orgb09c647}
+\label{sec:org5176583}
 
-\begin{frame}[label={sec:orgb55805e},fragile]{Source code}
- In some situations, I would also like to supplement my algorithmic definitions with
-some programming code -- for this I will use the \href{https://julialang.org/}{Julia} programming language. The code
-snippets would look something like:
+\begin{frame}[label={sec:org58b8050},fragile]{Source code}
+ During the course, I would also like to supplement my algorithmic definitions and
+explanations with some programming code -- for this I will use the \href{https://julialang.org/}{Julia} programming
+language. The code snippets would look something like:
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{julia}
 x = Float32.([1, 2, 3, 4]);
@@ -101,7 +104,7 @@ y = x .+ randn(length(x))
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org74f7ba7}]{References}
+\begin{frame}[label={sec:orgb11a83e}]{References}
 In some cases, and is the norm with academic traditions, we'll want to include a
 reference, a link to previous written works.
 
@@ -116,7 +119,7 @@ found in the bibliography slide (or bottom of the webpage if you're viewing the 
 version of the lectures).
 \end{frame}
 
-\begin{frame}[label={sec:org0021423}]{About Me}
+\begin{frame}[label={sec:org6255fbc}]{About Me}
 My name is Dr Jay Morgan. I am a researcher at the Université de Toulon, where I am
 developing Deep Learning models (a sub-field of Machine Learning research) for the
 study of astrophysical phenomenon.
@@ -134,7 +137,7 @@ I also publish libraries and source code online:
 If you have any questions, you can email me at jay.morgan@univ-tln.fr
 \end{frame}
 
-\begin{frame}[label={sec:org492f044}]{Where you can find the resources}
+\begin{frame}[label={sec:orgdee68f7}]{Where you can find the resources}
 I try to make this course as accessible as possible, which means that I host these
 slides in a variety of ways to suit you.
 
@@ -148,30 +151,56 @@ lectures from all years.
 \end{frame}
 
 \section*{What is learning, anyway?}
-\label{sec:orgb1550be}
+\label{sec:orgbc418fa}
 
 \subsection*{Learning about Learning}
-\label{sec:org2c4e97d}
+\label{sec:orgcd13ac1}
 
-\begin{frame}[label={sec:org3b27963}]{Let's answer the question of learning}
+\begin{frame}[label={sec:org2d84202}]{Let's answer the question of learning}
 We'll begin our journey into the world of Machine Learning by tackling the question
 of what it means to 'learn' -- how may a machine actually \emph{learn} anything?
 \end{frame}
 
-\begin{frame}[label={sec:org7e0e479}]{Study of Mice}
+\begin{frame}[label={sec:orgbe9800f}]{Study of Mice}
 To begin to answer the question of learning, we may turn to nature for
 advice. Principally, if we look at the studies conducted with Mice we find some idea
 to notion of learning (Shalev-Shwartz, Shai and Ben-David, Shai, 2014).
 \end{frame}
 
-\begin{frame}[label={sec:orgdc8692e}]{Bait-shyness}
+\begin{frame}[label={sec:org1575485}]{Bait-shyness}
+When a rat encounters a novel source of food, it will first eat a little bit of
+it. If the food is edible for the rat, it will continue to eat the food, even in
+future encounters. If, however, on the initial contact with the food, the rat deems
+the food poisonous, it will ignore and not eat the food in future encounters. This
+process we call 'bait-shyness'.
+
+Here then we see the rat, on finding something new, learn from its experience, and
+use that knowledge of the experience for future encounters.
 \end{frame}
 
-\begin{frame}[label={sec:org81625d8}]{Pigeon superstition}
+\begin{frame}[label={sec:org641a14e}]{Bait-shyness}
+Our initial understanding of rat's bait-shyness was limited, but we've come to
+understand more about it. For instance, we learn that their learning process is more
+complex than originally thought. In a later experiment, where the 'poison' in the
+food is replaced by a different unpleasant stimulus such as a electric shock --
+i.e. when a rat eats a food, it is then shocked. It was found that this did not
+deter the rat from eating the food in future encounters, unlike the poison.
+
+It is presumed that the rat's have some 'prior knowledge' about the world and do not
+infer a temporal relationship between the food and being shocked, while they can
+infer the same relationship with food and illness.
 \end{frame}
 
-\begin{frame}[label={sec:org5b3cd2b}]{Computer Programs}
-For a more formal definition of how computer programs could be said to learn, we have:
+\begin{frame}[label={sec:orge409caa}]{Computer Programs}
+From these two examples of how rats may learn we see: the rat will make a guess about
+something now (i.e. that the food is not poisonous), it will find out how good this
+guess is (i.e. it either gets ill or it does not), and learn from how well its guess
+was for the future. We also see that its learning can be impacted by the rat's prior
+knowledge about how the world may work.
+
+But how does this \emph{framework} for the process of learning translate to computers? For a
+more formal definition of how computer programs could be said to learn, we have a
+similar idea:
 
 \begin{quote}
 A computer program is said to learn from experience \(E\) with respect
@@ -182,47 +211,95 @@ a tasks in \(T\), as measured by \(P\), improves with experience \(E\).
 (Mitchell, Tom M, 1997)
 \end{frame}
 
-\begin{frame}[label={sec:org2a18575}]{When might we need Machine Learning}
-\begin{itemize}
-\item When problems are difficult to describe.
-\end{itemize}
+\begin{frame}[label={sec:org5067315}]{When might we need Machine Learning}
+Why do we need computer programs that 'learn' anyway? We already have programming
+languages, why can't we just use them?
+
+Let's suppose we're creating a very simple Optical Character Recognition (OCR)
+program. This program looks at a PDF document and converts the text into something we
+can copy and paste. Part of this program's task is to take an individual character,
+say the number '8', and recognise that it's an 8 and add that to the already scanned
+text.
+
+How would we go about creating a program where we can define how to identify '8' or
+'1' or 'l' -- with all the varieties of lighting conditions, handwriting, fonts,
+sizes. We could find the process of encompassing all different variations tiresome --
+if not impossible, and that's only for a single character!
 \end{frame}
 
-\begin{frame}[label={sec:orgb8912cb}]{Different types of Learning}
+\begin{frame}[label={sec:orgbb518d6}]{When might we need Machine Learning}
+With Machine Learning, instead of enumerating all possible solutions within a
+programming language, we collect a bunch of examples of '8's and give them to the
+algorithm to learn from.
+
+Through looking at these many different examples, the algorithm will/should be able
+to recognise what an 8 generally looks like.
+\end{frame}
+
+\begin{frame}[label={sec:org1cc246f}]{Different types of Learning}
+What we have just demonstrated by way of the OCR example, is the type of learning we
+call 'Supervised Learning'. We have many examples of input (lots of different kinds
+of handwritten 8's), and we tell the learning algorithm, that they are indeed the
+number 8.
+
+But there are other kind of different learning frameworks. Specifically we have the
+following:
+
 \begin{itemize}
 \item Supervised Learning
-\item Unsupervised / self-supervised Learning
+\item Unsupervised, or sometimes called self-supervised Learning
 \item Reinforcement Learning
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org432f690}]{Supervised Learning}
-\begin{itemize}
-\item Input and outputs are provided to the algorithm.
-\item Tuple
-\end{itemize}
+\begin{frame}[label={sec:org0d33047}]{Supervised Learning}
+To better formalise Supervised Learning from our previous OCR example, Supervised
+Learning is when the learning algorithm "see's" or has access to both the input and
+output.
+
+Let's have a dataset \(X\), which is a set consisting of tuple pairs \(x_i, y_i\). \(x_i£\)
+is an input, i.e. a single image with an '8', and \(y_i\) is a label which tells the
+learning algorithm if the input is indeed an '8' or something else. Mathematically we have:
+
+\(X = \{(x_1, y_1), (x_2, y_2), ..., (x_n, y_n)\}\)
 \end{frame}
 
-\begin{frame}[label={sec:org8c21865}]{Unsupervised Learning}
-\begin{itemize}
-\item Output is not provided to the model.
-\item Also called self-supervised -- why, text modelling.
-\item Clustering
-\end{itemize}
+\begin{frame}[label={sec:org1772ba1}]{Unsupervised Learning}
+In Unsupervised learning, we have again have a dataset \(X\), who's elements are only
+inputs. In other words, there are no corresponding labels for each input. Instead,
+the learning algorithm must learn inherent patterns in the data and create labels
+itself. Throughout the course, we'll see examples of Unsupervised Learning in action.
+
+One thing to note: Recent methodologies have started to call Unsupervised Learning,
+self-supervised. As we have just discussed, the labels are inherent to the data from
+the discovered patterns, it's just we are not explicitly giving them to the learning
+algorithm ourselves. So it's sort of like a supervised learning setup, except the
+learning algorithm is providing the labels itself -- hence the self-supervised.
 \end{frame}
 
-\begin{frame}[label={sec:org9f23bdc}]{Reinforcement Learning}
+\begin{frame}[label={sec:orgb46a473}]{Reinforcement Learning}
+Reinforcement Learning is very different to both Supervised and Unsupervised
+Learning. Here is the type of learning you might be familiar with if you've seen 'AI'
+that learns to play video games. In this type of learning, we have the following
+elements:
+
 \begin{itemize}
-\item Agent interacts with an environment.
-\item Gains a reward based on interactions.
-\item Over many 'games', the interactions will become better.
+\item An agent
+\item An environment
+\item A set of allowed actions the agent can make within its environment.
 \end{itemize}
+
+In this situation, an agent will interact with it's environment, and when it does
+something it can receive a reward (a reward can be positive or negative). The agent
+will remember what it has done to receive the reward. The objective for the agent is
+to maximise the reward score, and learns to do this through many iterations or
+play-through.
 \end{frame}
 
 \subsection*{Terminology}
-\label{sec:orgf2a2b86}
+\label{sec:orgd396531}
 
-\begin{frame}[label={sec:orgc77f316}]{What will our data look like?}
+\begin{frame}[label={sec:org02481da}]{What will our data look like?}
 Data in Machine Learning applications can come in a variety of different formats. The
 most typical data formats we might see are:
 
@@ -237,27 +314,42 @@ These are the initial formats, though, before actually doing any learning, we wi
 want to transform them into a different representation that we can use.
 \end{frame}
 
-\begin{frame}[label={sec:org2888843}]{Tables}
+\begin{frame}[label={sec:org9e57e74}]{Tables}
 A table, or tabular, format is a \(n \times m\) set of data with \(n\) samples or
-examples, and \(m\) features for each sample. For example:
+examples, and \(m\) features for each sample. For example, suppose we have a table
+consisting the price of 100 different houses:
+
 \begin{center}
-\begin{tabular}{rll}
-ID & \ldots{} & \\
-\hline
-1 &  & \\
-2 &  & \\
+\begin{tabular}{rrll}
+\toprule
+Number of bedrooms & Garden size (ft) & \ldots{} & Price (\$)\\
+\midrule
+3 & 0 & \ldots{} & 150,000\\
+5 & 10 & \ldots{} & 200,000\\
+\ldots{} & \ldots{} & \ldots{} & \\
+10 & 1000 & \ldots{} & 2,000,000\\
+\bottomrule
 \end{tabular}
 \end{center}
+
+In a supervised learning setting, where we want to predict the price of a house we may then have the following dataset:
+
+\(X = \{([3, 0, ...], 150,000), ([5, 10, ...], 200,000), \\..., ([10, 1000, ...], 2,000,000)\}\)
 \end{frame}
 
-\begin{frame}[label={sec:org19253ff}]{Images/Videos}
-\begin{itemize}
-\item Matrix (2D/3D)
-\item Video composition of Images in a sequence
-\end{itemize}
+\begin{frame}[label={sec:org111ac3f}]{Images/Videos}
+Images are composed of 2D or 3D arrays of numeric values. For example, in a RGB
+image that is 1024x500 pixels, we would have the array of size 1024x500x3 -- where 3
+is the red, green, and blue channel, respectively. If we have just a grayscale image,
+we could represent it as either 1024x500x1 or 1024x500 as the channel 'dimension' of
+the array is singular.
+
+We may already know that videos are simply a sequence of images that are iterated
+through 24+ times a second. For a 24 frames per second video, we would have an array
+size of 1024x500x3x24 -- a 4-dimensional array.
 \end{frame}
 
-\begin{frame}[label={sec:org976114e}]{Text}
+\begin{frame}[label={sec:org7af5e6f}]{Text}
 \begin{itemize}
 \item Composition of words
 \item Can be in order, but doesn't have to be!
@@ -265,14 +357,14 @@ ID & \ldots{} & \\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4521d7f}]{Time-series}
+\begin{frame}[label={sec:org74c65a6}]{Time-series}
 \begin{itemize}
 \item Sequence of values (vector with a time component)
 \item Example is a sound wave.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1f0c166}]{Inputs/Outputs}
+\begin{frame}[label={sec:orgb409b41}]{Inputs/Outputs}
 Within our data, each value will take on a certain type.
 
 \begin{center}
@@ -295,7 +387,7 @@ Nominal & element of \{'dog', 'cat'\}\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org36c274e}]{Types of Outputs -- Regression \& Classification}
+\begin{frame}[label={sec:org4ed8c6c}]{Types of Outputs -- Regression \& Classification}
 \begin{itemize}
 \item Regression - to continuious
 \item Classification to discrete
@@ -303,9 +395,9 @@ Nominal & element of \{'dog', 'cat'\}\\
 \end{frame}
 
 \subsection*{Example Problems}
-\label{sec:org90a8201}
+\label{sec:org4ff2f18}
 
-\begin{frame}[label={sec:org08272bf},fragile]{Boston House Prices Dataset -- Tabular Regression}
+\begin{frame}[label={sec:org29d0780},fragile]{Boston House Prices Dataset -- Tabular Regression}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{julia}
 using DataFrames
 using MLDatasets: BostonHousing
@@ -334,7 +426,7 @@ dataset[1:5]
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgfc4eea1},fragile]{Iris Dataset -- Tabular Classification}
+\begin{frame}[label={sec:org6e162ca},fragile]{Iris Dataset -- Tabular Classification}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{julia}
 using MLDatasets: Iris
 dataset = Iris();
@@ -362,7 +454,7 @@ dataset[1:5]
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgf8a866d},fragile]{MNIST Dataset -- Image Classification}
+\begin{frame}[label={sec:orge8df729},fragile]{MNIST Dataset -- Image Classification}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{julia}
 using MLDatasets: MNIST
 dataset = MNIST();
@@ -374,7 +466,7 @@ dataset[1:5]
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org682382e},fragile]{MNIST Dataset -- Image Classification}
+\begin{frame}[label={sec:org900b752},fragile]{MNIST Dataset -- Image Classification}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{julia}
 using Plots
 p = heatmap(dataset[1].features', yflip=true, colorbar=false)
@@ -413,43 +505,47 @@ Stacktrace:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org7938f01}]{IMDB Reviews -- Text Classification/Regression}
+\begin{frame}[label={sec:org9b457aa}]{IMDB Reviews -- Text Classification/Regression}
 \end{frame}
 
-\begin{frame}[label={sec:orgaca0941}]{Ham or Spam -- Text Classification}
+\begin{frame}[label={sec:orge0bd6a8}]{Ham or Spam -- Text Classification}
 \end{frame}
 
 \subsection*{Concerns \& Considerations}
-\label{sec:org9adece7}
+\label{sec:org72c413d}
 
-\begin{frame}[label={sec:org459a2fa}]{Compute resources -- environmental concerns}
+\begin{frame}[label={sec:org2b4ed76}]{Compute resources -- environmental concerns}
 \end{frame}
 
-\begin{frame}[label={sec:orgc2dcdb4}]{Bias}
+\begin{frame}[label={sec:org3875f8a}]{Bias}
 \end{frame}
 
-\begin{frame}[label={sec:org228022f}]{Personal information}
+\begin{frame}[label={sec:orgd4134de}]{Personal information}
 \begin{itemize}
 \item i.e. GANs reproducing exactly.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc8c2f52}]{Mental health of optimisation algorithms}
+\begin{frame}[label={sec:org0e5a3f7}]{Mental health of optimisation algorithms}
+\end{frame}
+
+\begin{frame}[label={sec:orgec82513}]{Copyright Concerns}
+Potential code laundering with github's copilot
 \end{frame}
 
 \section*{Summary}
-\label{sec:orge3b6472}
+\label{sec:org48e733e}
 
 \subsection*{What is Machine Learning}
-\label{sec:org5808e83}
+\label{sec:orgd17b4c3}
 
-\begin{frame}[label={sec:orga3eefa4}]{Problem statement}
+\begin{frame}[label={sec:orge67f5ba}]{Problem statement}
 \end{frame}
 
 \section*{Bibliography}
-\label{sec:org61e2e72}
+\label{sec:org7d27301}
 
-\begin{frame}[label={sec:org09895c0}]{Bibliography}
+\begin{frame}[label={sec:orgdd682e3}]{Bibliography}
 \noindent
 Mitchell, Tom M (1997). \emph{Machine learning}, McGraw-hill New York.
 
